[package]
edition = "2021"
name = "battlesnake-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.6"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["full"]}
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
